[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/cube.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="ViewportTexture" id=11]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = SubResource( 11 )

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="ViewportTexture" id=12]

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = SubResource( 12 )

[sub_resource type="PlaneMesh" id=7]

[sub_resource type="PlaneMesh" id=8]

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, -24.2243, -0.25, 0, 0.25, 0, 0, -0.720341, 15.6286, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="PlaneMesh" id=10]
size = Vector2( 10, 10 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.910395, 0.413741, 0, -0.413741, 0.910395, 0, 2.45715, 3.32789 )
current = true

[node name="Cube" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Front" type="MeshInstance" parent="Cube"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 1 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Viewport" type="Viewport" parent="Cube/Front"]
size = Vector2( 150, 150 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="CurrentText" type="Label" parent="Cube/Front/Viewport"]
margin_right = 150.0
margin_bottom = 150.0
text = "First"
align = 1
valign = 1

[node name="Left" type="MeshInstance" parent="Cube"]
transform = Transform( -4.37114e-008, -1, 0, -4.37114e-008, 1.91069e-015, -1, 1, -4.37114e-008, -4.37114e-008, -1, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="Cube/Left"]
size = Vector2( 150, 150 )
hdr = false
usage = 0
render_target_v_flip = true

[node name="PreviousText" type="Label" parent="Cube/Left/Viewport"]
margin_right = 150.0
margin_bottom = 150.0
text = "Previous"
align = 1
valign = 1

[node name="Right" type="MeshInstance" parent="Cube"]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, 1, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="Top" type="MeshInstance" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="Anim" type="AnimationPlayer" parent="Cube"]
anims/Rotation = SubResource( 9 )

[node name="Plane" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.631089, 0.77571, 0, -0.77571, 0.631089, 0, 3.56038, 2.41981 )

[connection signal="animation_finished" from="Cube/Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="animation_finished" from="Cube/Anim" to="Cube" method="_on_Anim_animation_finished"]
[connection signal="animation_started" from="Cube/Anim" to="." method="_on_Anim_animation_started"]
[connection signal="animation_started" from="Cube/Anim" to="Cube" method="_on_Anim_animation_started"]
